--- a/app/views/layouts/dash.html.erb
+++ b/app/views/layouts/dash.html.erb
@@ -21,7 +21,7 @@
                     <div id="escondido">
                         <ul>
                             <% if current_user.have_role?(:admin) %>
-                                <li><%= link_to "Controle de Usuarios", users_path %></li>
+                                <li><%= link_to "Controle de Usuários", users_path %></li>
                             <% end %>
                             <li><%= link_to "Editar perfil", edit_user_path(current_user) %></li>
                             <li><%= link_to "Alterar senha", "/alterar-senha" %></li>
