--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <!-- TITLE -->
-<% content_for :title do %> Editar Usuario - Sistema Grupo Vida, Amor e Riso! <% end %>
+<% content_for :title do %> Editar Usuário - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar usuarios</h1>
+<h1>Editar usuários</h1>
 
 <%= render 'form' %>
