--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <!-- TITLE -->
-<% content_for :title do %> Novo Usuario - Sistema Grupo Vida, Amor e Riso! <% end %>
+<% content_for :title do %> Novo Usuário - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Novo usuario</h1>
+<h1>Novo usuário</h1>
 
 <%= render 'form' %>
