--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <!-- TITLE -->
-<% content_for :title do %> Usuario @user.name - Sistema Grupo Vida, Amor e Riso! <% end %>
+<% content_for :title do %> Usuário @user.name - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
 <p id="notice"><%= notice %></p>
