--- a/app/views/cursos/index.html.erb
+++ b/app/views/cursos/index.html.erb
@@ -1,2 +1,55 @@
-<h1>Cursos#index</h1>
-<p>Find me in app/views/cursos/index.html.erb</p>
+<!-- TITLE -->
+<% content_for :title do %> Cursos - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
+<h1>Cursos</h1>
+
+<div id="guardaPesquisa">
+  <%= form_for "/cursos" do |f| %>
+    <ul>
+      <li class="noPaddingHomes hidePA ">
+        <%= f.text_field :login, :class => "inputGde input", :id => 'campoBusca' %>
+      </li>
+
+      <li class="liPesquisaAvancada">
+        <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
+        <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'btRealizarPesquisa' %>
+      </li>
+    </ul>
+  <% end %>
+
+<%= link_to "Novo curso", cursos_novo_path, class: "btEnviarForm" %>
+
+</div>
+
+<div id="guardaAtividadesRecentes">
+  <h2>Recebimentos mais próximos</h2>
+  <%# @courses.each do |rel| %>
+    <p>
+      <span><%#= rel.name %></span>
+      <span><%#= rel.total_amount %></span>
+      <span>DT Venc</span>
+      <%#= link_to 'Visualizar', "javascript:void(0);", :class => 'btVoltarForm' %>
+    </p>
+  <%# end %>
+</div>
+
+<div id="guardaResultadoPesquisa">
+  <h2>Resultado da pesquisa</h2>
+
+  <table cellspadding="0" cellspacing="0" width="100%">
+    <tr border="0">
+      <th width="14%"><span>Código</span></th>
+      <th width="14%"><span>Nº</span></th>
+      <th width="14%"><span>Nome</span></th>
+      <th width="14%"><span>Data Vencimento</span></th>
+      <th width="14%"><span>Status</span></th>
+      <th width="14%"><span>Valor Parcela</span></th>
+      <th width="14%"></th>
+    </tr>
+  </table>
+
+</div>
+
+
+
