--- a/app/views/cursos/index.html.erb
+++ b/app/views/cursos/index.html.erb
@@ -18,38 +18,45 @@
     </ul>
   <% end %>
 
-<%= link_to "Novo curso", cursos_novo_path, class: "btEnviarForm" %>
+<%= link_to "Novo curso", courses_new_path, class: "btEnviarForm" %>
 
 </div>
 
 <div id="guardaAtividadesRecentes">
-  <h2>Recebimentos mais próximos</h2>
+  <h2>Próximas turmas</h2>
   <%# @courses.each do |rel| %>
     <p>
       <span><%#= rel.name %></span>
       <span><%#= rel.total_amount %></span>
-      <span>DT Venc</span>
+      <span><%#= %></span>
       <%#= link_to 'Visualizar', "javascript:void(0);", :class => 'btVoltarForm' %>
     </p>
   <%# end %>
 </div>
 
 <div id="guardaResultadoPesquisa">
-  <h2>Resultado da pesquisa</h2>
+  <% if @course.size > 0 %>
+    <h2>Resultado da pesquisa</h2>
 
-  <table cellspadding="0" cellspacing="0" width="100%">
-    <tr border="0">
-      <th width="14%"><span>Código</span></th>
-      <th width="14%"><span>Nº</span></th>
-      <th width="14%"><span>Nome</span></th>
-      <th width="14%"><span>Data Vencimento</span></th>
-      <th width="14%"><span>Status</span></th>
-      <th width="14%"><span>Valor Parcela</span></th>
-      <th width="14%"></th>
-    </tr>
-  </table>
+    <table cellspadding="0" cellspacing="0" width="100%">
+      <tr border="0">
+        <th width="25%"><span>Código</span></th>
+        <th width="25%"><span>Nome do curso</span></th>
+        <th width="25%"><span>Tipo</span></th>
+        <th width="25%"><span>Turmas em andamento</span></th>
+      </tr>
 
+      <% @course.each do |c| %>
+        <tr border="0">
+          <td width="25%"><span><%= c.code %></span></td>
+          <td width="25%"><span><%= c.name %></span></td>
+          <td width="25%"><span><%= c.categoria %></span></td>
+          <td width="25%"><span> NO </span></td>
+        </tr>
+      <% end %>
+
+    </table>
+  <% else %>
+    <h2>Nenhum curso cadastrado até o momento</h2>
+  <% end %>
 </div>
-
-
-
