--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
 
 		<div id="opcoesLogin">
 			<ul>
-				<li> <%= link_to image_tag('box-cursos.jpg', :alt => 'Cursos'),             cursos_index_path %> <li>
+				<li> <%= link_to image_tag('box-cursos.jpg', :alt => 'Cursos'),             cursos_path %> <li>
 				<li> <%= link_to image_tag('box-servicos.jpg', :alt => 'Serviços'),       servicos_index_path %> <li>
 				<li> <%= link_to image_tag('box-assessoria.jpg', :alt => 'Assessoria'), assessoria_index_path %> <li>
 				<li> <%= link_to image_tag('box-financeiro.jpg', :alt => 'Financeiro'), financeiro_index_path %> <li>
