Corrigindo menu financeiro

--- a/app/views/financeiro/index.html.erb
+++ b/app/views/financeiro/index.html.erb
@@ -2,6 +2,10 @@
 <% content_for :title do %> Financeiro - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
+<!-- MENU -->
+<% content_for :menu do %> <%= render "menu" %> <% end %>
+<!-- / MENU -->
+
 <h1>Financeiro</h1>
 
 <div id="guardaPesquisa">
