--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -36,9 +36,7 @@
 
             <div id="guardaMenuCategoria">
                 <p>
-                    <%= link_to "Item 01", "javascript:void(0);" %> |
-                    <%= link_to "Item 02", "javascript:void(0);" %> |
-                    <%= link_to "Item 03", "javascript:void(0);" %>
+					<%= yield :menu %>
                 </p>
             </div>
         </div>
