--- a/app/views/cursos/edit.html.erb
+++ b/app/views/cursos/edit.html.erb
@@ -2,6 +2,10 @@
 <% content_for :title do %> Atualizar curso - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
+<!-- MENU -->
+<% content_for :menu do %> <%= render 'menu' %> <% end %>
+<!-- / MENU -->
+
 <h1>Editar curso - <%= @course.name %></h1>
 
 <%= render 'form' %>
