--- a/app/views/cursos/index.html.erb
+++ b/app/views/cursos/index.html.erb
@@ -2,6 +2,10 @@
 <% content_for :title do %> Cursos - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
+<!-- MENU -->
+<% content_for :menu do %> <%= render 'menu' %> <% end %>
+<!-- / MENU -->
+
 <h1>Cursos</h1>
 
 <div id="guardaPesquisa">
