--- a/app/views/turmas/show.html.erb
+++ b/app/views/turmas/show.html.erb
@@ -12,17 +12,26 @@
 	<li><strong><%= @team.name %></strong> <br/> Em andamento - <%= @team.periodo %></li>
 	<li><strong>Codigo: </strong> <%= @team.code %> </li>
 	<li><strong>Curso: </strong> <%= @team.curso %> </li>
-	<li><strong>Data inicio: </strong> 00/00/0000 <br/> <strong>Data termino: </strong> 00/00/0000</li>
-	<li></li>
+	<li>
+		<strong>Data início: </strong> 00/00/0000 <br/>
+		<strong>Data termino: </strong> 00/00/0000
+	</li>
+	<li>
+		<strong>Carga horária/aula: </strong> <%= @team.workload %> <br/>
+		<strong>Quantidade de aulas: </strong> <%= @team.class_length %> <br/>
+		<strong>Carga horária total: </strong> <%= @team.total_carga_horaria %> <br/>
+	</li>
+	<li>
+		<strong>Observações: </strong> <br/>
+		<%= @team.note %>
+	</li>
 </ul>
 
 <div id="infoTurmasCursos">
 	<ul>
-		<li><p><span>0</span> Turmas</p></li>
-		<li><p><span>0</span> Em Andamento</p></li>
-		<li><p><span>0</span> Concluídas</p></li>
-		<li><p><span>0</span> Canceladas</p></li>
-		<li><p><span>0</span> Interessados</p></li>
+		<li><p><span><%= @team.limit %></span> Vagas</p></li>
+		<li><p><span>0</span> Disponiveis</p></li>
+		<li><p><span>0</span> Alunos</p></li>
 	</ul>
 </div>
 
