--- a/app/views/cursos/show.html.erb
+++ b/app/views/cursos/show.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <ul>
-	<li><%= link_to "Criar turma", courses_path, :class => "btEnviarForm" %></li>
+	<li><%= link_to "Criar turma", teams_new_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Cancelar curso", courses_cancel_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
 </ul>
