--- a/app/views/turmas/show.html.erb
+++ b/app/views/turmas/show.html.erb
@@ -32,10 +32,14 @@
 		<li><p><span><%= @team.limit %></span> Vagas</p></li>
 		<li><p><span>0</span> Disponiveis</p></li>
 		<li><p><span>0</span> Alunos</p></li>
+		<li><p><%= link_to "Cancelar turma", teams_cancel_path, :class => "btEnviarForm", data:{ confirm: 'Ao cancelar essa turma, todas as inscrições serão alteradas para "Canceladas"
+	Deseja prosseguir?' } %></p></li>
+		<li><p><%= link_to "Alterar turma", teams_edit_path(@team.id), :class => "btEnviarForm" %></p></li>
 	</ul>
 </div>
 
 <ul>
-	<li><%= link_to "Turma curso", teams_cancel_path, :class => "btEnviarForm" %></li>
+	<li><%= link_to "Lista de presenças", "javascript:void(0);", :class => "btEnviarForm" %></li>
+	<li><%= link_to "Planejamento", "javascript:void(0);", :class => "btEnviarForm" %></li>
 	<li><%= link_to "Voltar", teams_path, :class => "btEnviarForm" %></li>
 </ul>
