Iniciando o cadastro de Alunos

--- a/app/views/turmas/_menu.html.erb
+++ b/app/views/turmas/_menu.html.erb
@@ -1,2 +1,3 @@
 <%= link_to "Cursos", courses_path %> |
-<%= link_to "Turmas", teams_path %>
+<%= link_to "Turmas", teams_path %> |
+<%= link_to "Alunos", students_path %> 
